set up images. removed excess images.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,18 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="stylesheet.css" type="text/css">
-  <title>The Great Race</title>
+  <title>The Flash vs Green Arrow</title>
   <meta name="description" content="HTML5 Template">
 
+  <link rel="stylesheet" href="stylesheet.css">
+
 </head>
+<body>
+  <img src="redLight.png" id="start_race" onclick="race()" alt="click to begin">
+  <img src="greenLight.png" id="during_race">
+  <hr>
+   <img src="flash.png" id="flash">
+   <div>
+     <img src="greenArrowKnocked.png" id="knocked">
+     <img src="greenArrowFired.png" id="fired">
+     <img src="arrow.png" id="arrow">
