--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-  <img src="redLight.png" id="start_race" onclick=race() alt="click to begin">
+  <img src="redLight.png" id="start_race" onclick='race()' alt="click to begin">
   <img src="greenLight.png" id="during_race">
   <hr>
    <img src="flash.png" id="flash">
@@ -19,6 +19,7 @@
    </div>
 
    <script>
+    var element = document.getElementById;
     var flash = document.getElementById('flash');
     var arrow = document.getElementById('arrow');
     var posF = 0;
@@ -26,11 +27,13 @@
 
     function race() {
 
+      element('start_race').display = 'none';
+      element('during_race').display = 'block';
       document.getElementById('arrow').display = 'block';
       document.getElementById('knocked').display = 'none';
       document.getElementById('fired').display = 'block';
 
-      while(flash.style.left < 500px || arrow.style.left < 500px)
+      while(flash.style.left < '500px' || arrow.style.left < '500px')
       {
         posF += Math.random();
         posA += Math.random();
