quotes around px

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-  <img src="redLight.png" id="start_race" onclick='race()' alt="click to begin">
+  <img src="redLight.png" id="start_race" onclick="race()" alt="click to begin">
   <img src="greenLight.png" id="during_race">
   <hr>
    <img src="flash.png" id="flash">
