--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
   <img src="redLight.png" id="start_race" onclick="race()" alt="click to begin">
   <img src="greenLight.png" id="during_race">
   <hr>
+  <div>
    <img src="flash.png" id="flash">
-   <div id="greenArrow">
+  </div>
+  <div id="greenArrow">
      <img src="greenArrowKnocked.png" id="knocked">
      <img src="greenArrowFired.png" id="fired">
      <img src="arrow.png" id="arrow">
-   </div>
+  </div>
 
    <script>
     var flash = document.getElementById('flash');
@@ -35,13 +37,13 @@
       var timer = setInterval(frame, 100);
 // Moves the images to the right by a random number between 1 and 20
   function frame (){
-    if (posF > 500 || posA > 500 ){
+    if (posF > 1615 || posA > 1615 ){
       clearInterval(timer);
       posF > posA ? alert("Flash Wins!") : alert("Green Arrow Wins!");
     } else
     {
-      var rdmF = Math.floor(Math.random() * 20);
-      var rdmA = Math.floor(Math.random() * 20);
+      var rdmF = Math.floor(Math.random() * 50);
+      var rdmA = Math.floor(Math.random() * 50);
       posF += rdmF;
       posA += rdmA;
       flash.style.left = posF + 'px';
