--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
     if (posF > 1615 || posA > 1615 ){
       clearInterval(timer);
       posF > posA ? alert("Flash Wins!") : alert("Green Arrow Wins!");
-    } else
+      location.reload();
+    }
+    else
     {
       var rdmF = Math.floor(Math.random() * 50);
       var rdmA = Math.floor(Math.random() * 50);
